Finish BracePositionsTest and fix test warning