@@ -117,6 +117,7 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     maxParallelForks = 16
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 
     testLogging {
         events 'failed'
